--- a/templates/head.tmpl.html
+++ b/templates/head.tmpl.html
@@ -1,4 +1,4 @@
-        <title>Title</title>
+        <title>Chatty</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
