add test user to databse, add more test coverage

--- a/templates/head.tmpl.html
+++ b/templates/head.tmpl.html
@@ -1,4 +1,4 @@
-        <title>Chatty</title>
+        <title>{{ .title }}</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
