--- a/templates/register.tmpl.html
+++ b/templates/register.tmpl.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
+      <title>{{ .title }}</title>
       {{template "head.tmpl.html"}}
     </head>
 
