Refactor code and add router tests

--- a/templates/head.tmpl.html
+++ b/templates/head.tmpl.html
@@ -1,4 +1,4 @@
-        <title>Chatty</title>
+        <title>{{ .title }}</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -13,4 +13,4 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="static/register.css">
+        <link rel="stylesheet" href="/static/register.css">
