--- a/templates/message.tmpl.html
+++ b/templates/message.tmpl.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         {{template "head.tmpl.html"}}
-        <link rel="stylesheet" href="static/messages.css">
+        <link rel="stylesheet" href="/static/messages.css">
     </head>
 
     <body>
